Fixed text overflow

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -47,7 +47,7 @@
 .frontTitle {
   margin-top: 10px;
   margin-bottom: -16px;
-  font-size: 48px;
+  font-size: 40px;
   font-family: var(--card-front-font);
 }
 .caption {
